--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "typescript-plugin-css-modules": "^3.4.0"
   }
 }
